--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="80dp"
+    android:layout_margin="5dp"
+    android:background="@color/list_background">
 
     <TextView
         android:id="@+id/title"
@@ -13,12 +15,8 @@
         android:layout_marginEnd="20dp"
         android:singleLine="true"
         android:text="Hello world"
+        android:textColor="#FFFFFF"
         android:textSize="22sp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.2dp"
-        android:background="@color/cardview_dark_background" />
 
     <TextView
         android:id="@+id/movieId"
